nvcs-client/src/index.css
body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
  margin: 0;
}

main {
  height: 100vh;
  overflow-y: scroll;
  overflow-x: hidden;
}

.left-corner-element {
  position: absolute;
  top: 100%;
  transform: translate(0, -100%);
  padding: 5px 10px;
}

.top-banner {
  width: 95%;
  padding: 10px;
  text-align: center;
  position: absolute;
  left: 50%;
  transform: translate(-50%);
  border: 1px solid black;
  background-color: #B40000;
  color: white;
  font-weight: bold;
}

.loading-icon {
  display: inline-block;
  width: 20px;
  height: 20px;
  border: 2px solid rgba(255,255,255,.3);
  border-radius: 50%;
  border-top-color: green;
  animation: spin 1s ease-in-out infinite;
  -webkit-animation: spin 1s ease-in-out infinite;
}

@keyframes spin {
  to { -webkit-transform: rotate(360deg); }
}
@-webkit-keyframes spin {
  to { -webkit-transform: rotate(360deg); }
}

.main-content {
  margin: auto;
  max-width: 60em;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.overlay {
  width: 100vw;
  height: 100vh;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 999;
}

.overlay .content {
  background: white;
  color: black;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  outline: 1px solid black;
  box-shadow: 5px 5px 10px 0px;
  padding: 10px 20px;
}

.overlay .backdrop {
  background: black;
  opacity: 0.3;
  width: 100%;
  height: 100%;
}

.top-action-container {
  display: flex;
  flex-direction: column;
  gap: 5px;
  background: beige;
  padding: 10px;
  border: 1px solid lightgrey;
}

.label-content-container {
  display: flex;
  gap: 5px;
}

.label-content-container > label {
  width: 20%;
}

.label-content-container > div,
.label-content-container > select,
.label-content-container > input {
  flex-grow: 1;
}

.label-content-container > button {
  width: fit-content;
}

.label-content-container > .vertical-content {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.json-action-container {
  display: flex;
  gap: 5px;
  flex-grow: 1;
}

.json-action-container > button {
  flex-grow: 1;
}

.browse {
  width: fit-content !important;
}

#detected-json-container {
  white-space: nowrap;
}

.hierarchyNode > ul {
  width: fit-content;
  border-left: 1px solid black;
}

.hierarchyNodeButton {
  background: none;
  border: none;
  color: blue;
  text-decoration: underline;
  padding: 0;
  margin: 0;
  font: inherit;
  text-align: left;
  vertical-align: top;
}

.hierarchyNodeButton:hover {
  background: lightgray;
}

.node-level-tag {
  background-color: lightcoral;
  border-radius: 5px;
  padding: 1px 4px;
  margin: 0 5px;
  border: 1px solid lightgray;
  font-size: 0.8rem;
  font-weight: bold;
  color: white;
  text-shadow: 2px 1px 2px black;
}

.hidden {
  display: none !important;
}

dialog:not([open]) {
  display: none;
}

::backdrop {
  background: rgba(0, 0, 0, 0.3);
}

.dialog {
  position: fixed;
  width: 50%;
  height: fit-content;
  max-height: 90%;
  border: 1px solid black;
  background-color: white;
  display: flex;
  flex-direction: column;
  z-index: 1000;
}

.small-dialog {
  max-width: 25%;
}

.popup-dialog {
  padding: 0;
  max-width: 30%;
}

.popup-header {
  padding: 15px;
}

.popup-content {
  margin-left: 15px;
  padding-right: 15px;
  max-height: 500px;
  overflow: auto;
}

.popup-footer {
  padding: 15px;
}

.dialog .alert-content {
  display: flex;
  justify-content: center;
  gap: 15px;
}

.text-align-center {
  text-align: center;
}

.text-align-left {
  text-align: left;
}

.alert-buttons {
  display: flex;
  justify-content: flex-end;
  gap: 5px;
}

.dialog .header-container {
  padding: 20px;
  border-bottom: 1px solid black;
}

.dialog .button-container {
  display: flex;
  gap: 5px;
  justify-content: flex-end;
}

.dialog .header-container h2 {
  width: 100%;
  text-align: center;
  margin: 0;
  padding: 0;
}

.dialog .body-container {
  flex-grow: 1;
  overflow: auto;
  padding: 20px;
}

.dialog .input-container {
  display: flex;
  gap: 10px;
  padding: 5px;
}

.dialog .key-holder {
  width: 25%;
}

.dialog .value-holder {
  flex-grow: 1;
}

.dialog .checkbox-container {
  width: 75%;
  display: flex;
  flex-wrap: wrap;
  gap: 12px 24px;
}

.dialog .filter-container {
  padding: 5px 0;
}

.dialog .sub-content-header-container {
  display: flex;
  gap: 5px;
  margin: 10px 0;
}

.dialog .sub-content-header-container label {
  align-content: center;
}

.dialog .sub-content-header-container input {
  flex-grow: 1;
  font-weight: bold;
  font-size: large;
}

.dialog .sub-content-container {
  display: flex;
  gap: 5px;
  margin: 3px 0;
}

.dialog .sub-content-container label {
  padding-right: 5px;
  align-content: center;
}

.dialog .sub-key-holder {
  width: 25%;
}

.dialog .sub-key-holder-sm {
  width: 3%;
}

.dialog .sub-value-holder {
  flex-grow: 1;
}

.dialog .sub-content-button-container {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  gap: 3px;
}

.dialog .input-container select,
.dialog .input-container textarea,
.dialog .input-container input[type='text'] {
  border: 1px solid grey;
  resize: vertical;
  height: fit-content;
  margin: 0;
  padding: 5px;
  white-space: nowrap;
}

.dialog .input-container input[type='checkbox'] {
  margin: 0;
  padding: 0;
  vertical-align: middle;
  margin-bottom: 2px;
}

.document-section .input-container textarea,
.document-section .input-container input[type='text'] {
  flex: 1;
}

.document-section-content {
  padding-left: 50px;
}

option:disabled,
textarea:read-only,
input:read-only {
  background: lightgrey;
  border: 1px solid grey;
}

.dialog .footer-container {
  padding: 20px;
  border-top: 1px solid black;
}

.dialog button {
  width: fit-content;
  height: fit-content;
}

.alert-container {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.alert-header-container {
  display: flex;
  justify-content: space-between;
  padding: 15px;
}

.alert-header-container h2 {
  flex: 1;
  margin: 0;
}

.alert-header-container button {
  height: 32px;
  width: 32px;
  border: none;
  background: none;
  font-size: 1.5em;
  align-self: center;
}

.alert-header-container button:hover {
  border: 1px solid black;
  border-radius: 10px;
}

.alert-type {
  border: 3px solid black;
  padding: 10px;
}

.alert-type-counter {
  align-content: center;
  text-align: center;
  height: 32px;
  width: 32px;
  font-weight: bold;
}

.error-bg-color {
  background-color: #f2c9c9;
}

.warning-bg-color {
  background-color: #fbfb88;
}

.border-box-list {
  list-style: none;
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  column-count: 2;
  column-width: auto;
  column-gap: 1em;
}

.border-box-list-item {
  border: 1px solid black;
  padding: 5px;
  margin: 5px 0;
  box-sizing: border-box;
  display: inline-block;
  width: 100%;
}

.invalid-species-container {
  margin: none;
}

.invalid-filter-name {
  margin: 0;
  font-weight: bold;
}

